2007-07-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-load.c (do_layer_record): applied part of a
	patch from John Marshall that fixes handling of the short layer
	name (bug #445316).

2007-07-06  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-load.c (xcf_load_image): marked two error messages
	as translatable strings.

	* libgimpbase/gimputils.c (gimp_any_to_utf8): insert a blank
	before the text that marks the string as invalid.

2007-07-06  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/sunras.c: validate size values read from files
	before using them to allocate memory.

2007-07-06  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/psd-load.c: validate size values read from files
	before using them to allocate memory.

2007-07-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/displace.c: applied patch from Ulf-D. Ehlert
	that fixes disappearing buttons (bug #454011).

2007-07-05  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/psp.c: finished error handling cleanup.

2007-07-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psp.c: some cleanup to the error handling.

2007-07-05  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/psd-load.c (do_layer_record): check for invalid
	number of channels in a layer.

	* plug-ins/common/pcx.c (load_image): check for invalid image
	width or height.

	* plug-ins/bmp/bmpread.c: check for invalid image width or height,
	return if the image could not be read instead of trying to set the
	resolution or to flip a non-existing image.

2007-07-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimperrordialog.c (gimp_error_dialog_add): don't
	count the number of repeated messages when the error messages are
	being redirected to stderr already.

2007-07-05  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-read.c (xcf_read_int32) (xcf_read_int8): return the
	number of bytes that have been read from the file.

	* app/xcf/xcf-load.c (xcf_load_prop): return FALSE when reading fails.
